--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/DevSanso/Blog#readme",
   "devDependencies": {
-
+    "@types/express": "^4.17.13",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
