서브 프로젝트에 package.json 생성, 각각 프로젝트는 자바스크립트로 컴파일후, npm install를 사용

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "@local/express_singleton" : "file:./packages/express_singleton",
+    "@local/metadata" : "file:./packages/metadata",
+    "@local/middleware_page" : "file:./packages/middleware/page"
   }
 }
