--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "compile" : "node ./compile.js",
-    "clean" : "node ./clean.js"
+    "test": "npx ts-node ./server main.ts",
+    "compile": "node ./compile.js",
+    "clean": "node ./clean.js"
   },
   "repository": {
     "type": "git",
@@ -19,14 +19,21 @@
   },
   "homepage": "https://github.com/DevSanso/Blog#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@local/express_singleton": "file:./packages/express_singleton",
+    "@local/metadata": "file:./packages/metadata",
+    "@local/middleware_page": "file:./packages/middleware/page",
+    "@local/router_user":"file:./packages/router/user",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
-    "@local/express_singleton" : "file:./packages/express_singleton",
-    "@local/metadata" : "file:./packages/metadata",
-    "@local/middleware_page" : "file:./packages/middleware/page"
+    "express-session": "^1.17.3",
+    "helmet": "^5.1.0"
   }
 }
