--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
     "test": "npx ts-node ./server main.ts",
     "compile": "node ./compile.js",
     "clean": "node ./clean.js"
-
   },
   "repository": {
     "type": "git",
@@ -21,7 +19,6 @@
   },
   "homepage": "https://github.com/DevSanso/Blog#readme",
   "devDependencies": {
-
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
@@ -30,14 +27,16 @@
   },
   "dependencies": {
     "@local/express_singleton": "file:./packages/express_singleton",
+    "@local/extends": "file:./packages/extends",
     "@local/metadata": "file:./packages/metadata",
-    "@local/middleware_page" : "file:./packages/middleware/page",
-    "@local/router_user" : "file:./packages/router/user",
-    "@local/extends" : "file:./packages/extends",
+    "@local/middleware_page": "file:./packages/middleware/page",
+    "@local/middleware_db": "file:./packages/middleware/db",
+    "@local/router_user": "file:./packages/router/user",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "helmet": "^5.1.0"
+    "helmet": "^5.1.0",
+    "mysql2": "^2.3.3"
   }
 }
