--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@local/middleware_db": "file:./packages/middleware/db",
     "@local/middleware_page": "file:./packages/middleware/page",
     "@local/router_user" : "file:./packages/router/user",
-    "@local/router_post" : "file:./packages/router/editor",
+    "@local/router_editor" : "file:./packages/router/editor",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
