--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "@local/middleware_page": "file:./packages/middleware/page",
     "@local/router_user" : "file:./packages/router/user",
     "@local/router_editor" : "file:./packages/router/editor",
+    "@local/router_post" : "file:./packages/router/post",
+
+
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
