--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@local/express_singleton": "file:./packages/express_singleton",
     "@local/extends": "file:./packages/extends",
     "@local/metadata": "file:./packages/metadata",
+    "@local/db_crud" : "file:./packages/db_crud",
     "@local/middleware_db": "file:./packages/middleware/db",
     "@local/middleware_page": "file:./packages/middleware/page",
     "@local/router_user" : "file:./packages/router/user",
