--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     "@local/express_singleton": "file:./packages/express_singleton",
     "@local/extends": "file:./packages/extends",
     "@local/metadata": "file:./packages/metadata",
+    "@local/db_crud" : "file:./packages/db_crud",
     "@local/middleware_db": "file:./packages/middleware/db",
     "@local/middleware_page": "file:./packages/middleware/page",
     "@local/router_user" : "file:./packages/router/user",
-    "@local/router_post" : "file:./packages/router/editor",
+    "@local/router_editor" : "file:./packages/router/editor",
+    "@local/router_post" : "file:./packages/router/post",
+
+
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
