--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@local/db_crud" : "file:./packages/db_crud",
     "@local/middleware_db": "file:./packages/middleware/db",
     "@local/middleware_page": "file:./packages/middleware/page",
+    "@local/middleware_access_restriction" : "file:./packages/middleware/access_restriction",
     "@local/router_user" : "file:./packages/router/user",
     "@local/router_editor" : "file:./packages/router/editor",
     "@local/router_post" : "file:./packages/router/post",
