error, url 접근 제한 미들웨어 생성,etc.. (#6)
* 배열 인덱스를 2차 접근으로 수정

* 서브 프로젝트 lock 파일 삭제

* http 접근 제한 미들웨어 생성(세션 존재유무로 확인)

* error 헨들링 미들웨어 생성, 일부 throw 코드들도 해당 미들웨어에 맞추어서 수정

* "/post/editor" url 접근제한 추가, isExistSessionData : 세션에 userinfo 값 존재유무 확인,isMatchingAccessIp : ipv6은 확인 안되는 버그 있으나 수정은 보류

* 설계 자체 문제, try-catch 삭제후, error 매개변수를 받아 처리하는걸로 수정

* error 미들웨어 등록 객체 변경

--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@local/extends": "file:./packages/extends",
     "@local/metadata": "file:./packages/metadata",
     "@local/db_crud" : "file:./packages/db_crud",
+    "@local/middleware_error": "file:./packages/middleware/error",
     "@local/middleware_db": "file:./packages/middleware/db",
     "@local/middleware_page": "file:./packages/middleware/page",
+    "@local/middleware_access_restriction" : "file:./packages/middleware/access_restriction",
     "@local/router_user" : "file:./packages/router/user",
     "@local/router_editor" : "file:./packages/router/editor",
     "@local/router_post" : "file:./packages/router/post",
