--- a/package.json
+++ b/package.json
@@ -27,23 +27,22 @@
     "typescript": "^4.7.2"
   },
   "dependencies": {
+    "@local/db_crud": "file:./packages/db_crud",
     "@local/express_singleton": "file:./packages/express_singleton",
     "@local/extends": "file:./packages/extends",
     "@local/metadata": "file:./packages/metadata",
-    "@local/db_crud" : "file:./packages/db_crud",
-    "@local/middleware_error": "file:./packages/middleware/error",
+    "@local/middleware_access_restriction": "file:./packages/middleware/access_restriction",
     "@local/middleware_db": "file:./packages/middleware/db",
+    "@local/middleware_error": "file:./packages/middleware/error",
     "@local/middleware_page": "file:./packages/middleware/page",
-    "@local/middleware_access_restriction" : "file:./packages/middleware/access_restriction",
-    "@local/router_user" : "file:./packages/router/user",
-    "@local/router_editor" : "file:./packages/router/editor",
-    "@local/router_post" : "file:./packages/router/post",
-
-
+    "@local/router_editor": "file:./packages/router/editor",
+    "@local/router_post": "file:./packages/router/post",
+    "@local/router_user": "file:./packages/router/user",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "fuse.js": "^6.6.2",
     "helmet": "^5.1.0",
     "mysql2": "^2.3.3",
     "uuid": "^8.3.2"
