--- a/app/src/lib/config/app.json
+++ b/app/src/lib/config/app.json
@@ -1,3 +1,5 @@
 {
-    "title" : "Blog"
+    "title" : "Blog",
+    "subTitle" : "simple Blog",
+    "blogExplain" : "this blog simple make with nodejs project"
 }
