npm run 스크립트 명령어 추가

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx ts-node ./server main.ts",
+    "start": "npx ts-node ./server main.ts",
     "compile": "node ./scripts/compile.js",
-    "clean": "node ./scripts/clean.js"
+    "clean": "node ./scripts/clean.js",
+    "dbInit" : "node ./scripts/db_init.js"
   },
   "repository": {
     "type": "git",
