--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/adapter-static": "next",
 		"@sveltejs/kit": "next",
+		"@types/cookie": "^0.5.1",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.1",
@@ -23,6 +24,7 @@
 	"type": "module",
 	"dependencies": {
 		"axios": "^0.27.2",
+		"cookie": "^0.5.0",
 		"simplebar": "^5.3.8"
 	}
 }
