--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,11 +12,13 @@
   "license": "MIT",
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/quill": "^2.0.9",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
     "esbuild": "^0.14.43",
     "http-server": "^14.1.1",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.7.3"
